// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNetworkStatus renders without crashing 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "fontSize": "36px",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  📡 Online
</div>
`;

exports[`useNetworkStatus set offline status correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "fontSize": "36px",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  📴 Offline
</div>
`;
